adding server.js for webserver testing

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <button type="button" onclick="doPrev()">Previous</button>
         <button type="button" onclick="doNext()">Next</button>
         <button type="button" onclick="doSearch()">Search</button>
-        <button type="button" onclick="doFavourite()">Favourites</button>
+        <button type="button" onclick="doFavourite()">Favourite</button>
         
         
         <br>
